fix spacing

--- a/jennifer/css/refresh-2.css
+++ b/jennifer/css/refresh-2.css
@@ -150,11 +150,17 @@ border-bottom: 2px solid RGB(255, 255, 255); }
 
 .mr-home {
 
-	font-size: 18px !important;
+	font-size: 17px !important;
 
 
 }
 
+
+.container {
+
+	padding-left: 0px !important;
+	padding-right: 0px !important;"
+}
 .col-lg-4 {
 
 padding-right: 40px !important;
@@ -240,7 +246,6 @@ abbr {
 	margin-bottom: -10px !important;
 	padding-top: 2px !important;
 }
-
 
 
 
